--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
 		"@types/node": "^25.1.0",
 		"cli-cursor": "^5.0.0",
 		"prettier": "^3.6.2",
-		"typescript": "^5.9.2",
-		"uvu": "^0.5.6"
+		"typescript": "^5.9.2"
 	},
 	"dependencies": {
 		"when-exit": "^2.1.5"
