chore: some changes

--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
 	"files": [
 		"dist"
 	],
-	"keywords": [],
+	"keywords": [
+		"toggle",
+		"cli",
+		"terminal",
+		"cursor"
+	],
 	"author": "Hyper-Z11 (https://github.com/hyperz111)",
 	"license": "MIT",
 	"repository": "https://github.com/hyperz111/kursor-cli.git",
